Simplify loading indicator to use one already provided in the CSS framework.

--- a/HomeClient/src/app/legolights/legolights.component.html
+++ b/HomeClient/src/app/legolights/legolights.component.html
@@ -1,4 +1,3 @@
-<button (click)="toggleActivation()" class="button" [ngClass]="isOn ? 'is-success' : 'is-danger'">
-  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="small" color="#00fdff" type="ball-atom" [fullScreen]="false"></ngx-spinner>
+<button (click)="toggleActivation()" class="button" [ngClass]="{'is-success': isOn, 'is-danger': !isOn, 'is-loading': isLoading}">
   <span>Lego lights are <span *ngIf="isOn">on</span><span *ngIf="!isOn">off</span></span>
 </button>
